--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "pico"
 version = "0.1.0"
 edition = "2021"
-author = "Sylvia Waldron"
+authors = ["Sylvia Waldron"]
+description = "A small image editor"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
