--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ description = "A small image editor"
 [dependencies]
 image = "0.24"
 clap = { version = "4.1", features = ["derive"] }
+ordered-float = "3.4"
