--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ target/
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# Ignore any test images
+*.jpg
